Corrected url in library.properties

--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=georgychen
 sentence=WDT_Random_Generator Library
 paragraph=
 category=Uncategorized
-url=https://github/WDT_Random_Generator
+url=https://github.com/georgychen/WDT_Random_Generator
 architectures=*
